--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-swc-transform",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Vite plugin for transforming source files with SWC.",
   "homepage": "https://timtech.blog/posts/transform-typescript-legacy-decorators-vite-swc-plugin/",
   "repository": {
@@ -24,9 +24,8 @@
     "metadata",
     "reflect",
     "nest",
-    "typedorm",
-    "dependency",
-    "injection"
+    "typeorm",
+    "dependency injection"
   ],
   "type": "module",
   "module": "index.js",
