--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "vite-plugin-swc-transform",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Vite plugin for transforming source files with SWC.",
-  "homepage": "https://timtech.blog/posts/transform-typescript-legacy-decorators-vite-swc-plugin/",
+  "homepage": "https://github.com/ziir/vite-plugin-swc-transform/#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ziir/vite-plugin-swc-transform.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ziir/vite-plugin-swc-transform/issues"
   },
   "author": {
     "name": "Timothée “Tim” Pillard",
@@ -28,26 +31,51 @@
     "dependency injection"
   ],
   "type": "module",
-  "module": "index.js",
+  "module": "./dist/index.js",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": null
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
-  "scripts": {},
+  "engines": {
+    "node": "^18.0.0 || >=20.0.0"
+  },
+  "scripts": {
+    "build": "tsc --build",
+    "check": "biome check src",
+    "check:fix": "npm run check -- --apply",
+    "prepare": "npm run validate && npm run build",
+    "test": "vitest",
+    "typecheck": "tsc --build --emitDeclarationOnly",
+    "validate": "npm run check && npm run typecheck && npm run test -- --run"
+  },
   "dependencies": {
-    "@rollup/pluginutils": "^5.0.5",
-    "@swc/core": "^1.3.92"
+    "@rollup/pluginutils": "^5.1.0",
+    "@swc/core": "^1.4.6"
   },
   "peerDependencies": {
-    "vite": "^4"
+    "@types/node": "^18.0.0 || >=20.0.0",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.1"
   },
   "peerDependenciesMeta": {
+    "@types/node": {
+      "optional": true
+    },
     "vite": {
       "optional": true
+    },
+    "vitest": {
+      "optional": true
     }
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.6.0",
+    "@types/node": "^20.11.25",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5",
+    "vitest": "^1.3.1"
   }
 }
