fix missing package.json['files']

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "type": "module",
   "module": "./dist/index.js",
+  "files": ["dist", "README.md", "LICENSE"],
   "exports": {
     "./package.json": "./package.json",
     ".": {
