--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.defaultFormatter": "biomejs.biome",
     "[json]": {
         "editor.defaultFormatter": "biomejs.biome"
-    }
+    },
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
