--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,9 @@
 {
 	"extends": "../tsconfig.base",
 	"compilerOptions": {
-		"rootDir": "."
+		"rootDir": ".",
+		"declarationDir": "../dist/types",
+		"tsBuildInfoFile": "tsconfig.src.tsbuildinfo"
 	},
 	"include": ["**/*"],
 	"exclude": ["__tests__"]
