--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-
     "pretty": true,
-    "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+
     "declaration": true,
     "declarationMap": true,
+    "emitDeclarationOnly": true,
     "sourceMap": true,
     "inlineSources": true,
 
     "composite": true,
-    "noEmitOnError": true,    
+    "noEmitOnError": true,
 
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
@@ -25,6 +24,6 @@
     "strict": true,
     "skipLibCheck": false,
 
-    "types": ["node"]
+    "types": []
   }
 }
