--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vite-plugin-swc-transform",
-	"version": "1.1.0-alpha.2",
+	"version": "1.1.0",
 	"description": "Vite plugin for transforming source files with SWC.",
 	"homepage": "https://github.com/ziir/vite-plugin-swc-transform/#readme",
 	"repository": {
